--- a/films.css
+++ b/films.css
@@ -1,259 +1,304 @@
-/* Eléments principaux de la page */
-
-body
-{
-    background-color: black;
-    font-family: 'Trebuchet MS', Arial, sans-serif;
-}
-
-#bloc_page
-{
-    width: 900px;
-    margin: auto;
-}
-
-/* Header */
-
-header
-{
-    background: repeat-x bottom;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#titre_principal
-{
-    display: flex;
-    flex-direction: column;
-    color: red;
-}
-
-header h1 {
-    font-size: 2rem;
-    margin: 2rem auto 1rem;
-    line-height: 1;
-}
-
-/* Navigation */
-
-nav ul
-{
-    list-style-type: none;
-    display: flex;
-}
-
-nav li
-{
-    margin-right: 15px;
-	text-align: right;
-}
-
-nav a
-{
-    font-size: 1.3em;
-    color: white;
-    padding-bottom: 3px;
-    text-decoration: none;
-}
-
-/* Meilleur film */
-
-.item__img {
-    margin: 50px;
-    width: 200px;
-    height: 400px;
-    border: white;
+html {
+    background-color: white;
   }
   
-  .item__body {
-    width: 200px;
-    height: 250px;
-    padding: 25px;
-    border: white;
+  @-webkit-keyframes animetest {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
   
-  .item__title {
-    font-size: 24px;
-    margin-bottom: 50px;
-    font-weight: bold;
-    color: white;
+  @keyframes animetest {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
   
-  .item__description {
-    width: 200px;
-    height: 250px;
-    overflow: scroll;
-    margin-left: 5px;
-    color:white;
+  .top {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #1a1a1a;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    color: whitesmoke;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    -webkit-box-shadow: 0px 6px 18px 18px rgba(119, 119, 126, 0.2);
+            box-shadow: 0px 6px 18px 18px rgba(119, 119, 126, 0.2);
   }
   
-  .items {
-    position: relative;
-  }
-
-#best_movie
-{   
-	margin-top: 15px;
-    height: auto;
-    border-radius: 5px;
-    position: relative;
-    box-shadow: 0px 4px 4px #1c1a19;
-    margin-bottom: 25px;
-}
-
-#meilleur_film
-{
-	margin: 50px;
-    width: 200px;
-    height: 400px;
-    border: white;
-    overflow: hidden;
-}
-
-a {
-    color: inherit;
-    transition: 0.25s all ease-in-out;
-}
-
-a:visited {
-    color: #3d4852;
-}
-
-a:hover,
-a:focus,
-a:active {
-    background-color: #3d4852;
-    color: white;
-}
-
-a:focus {
-    outline: thin solid #3d4852;
-}
-
-a:hover,
-a:active {
-    outline: 0;
-}
-
-a.button {
-    align-items: center;
-    background: url('images/.bouton_rouge.png') repeat-x;
-    border: 1px solid red;
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
-    display: inline-flex;
-    padding: 0.25rem 0.75rem;
-    text-decoration: none;
-    transition: all 0.25s ease-in-out;
-}
-
-a.button:hover,
-a.button:focus {
-    background-color: #58636F;
-    box-shadow: 0 0 2px 2px #bac6d3;
-}
-
-a.button:focus {
-    outline: 1px solid #3d4852;
-}
-
-a.button:visited {
-    color: #fff;
-}
-
-/* section catégories */
-
-ul {
-    margin: 0 0 1.5rem;
-    padding: 0;
-}
-
-li {
-    display: inline-block;
-}
-
-svg {
-    fill: currentColor;
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-img {
-    height: auto;
-    margin-bottom: .5rem;
-    max-width: calc(100% + 2rem);
-    position: relative;
-    left: -1rem;
-    right: -1rem;
-}
-
-p {
-    width: 200px;
-    height: 250px;
-    overflow: scroll;
-    margin-left: 5px;
-    color: white
-}
-
-main {
-    padding: 1rem 2rem;
-    margin: auto;
-}
-
-.card {
-    border: 1px solid #bac6d3;
-    border-radius: 8px;
-    padding: 1rem;
-}
-
-/* Carouseul JS */
-
-.carousel {
-    position: relative;
-}
-
-.carousel__container {
-    transition: transform 0.3s;
-    transform: translate3d(0, 0, 0)
-}
-
-.carousel__container::after {
-    content: '';
-    clear: both;
-    display: table;
-}
-
-.carousel__item {
+  .top h1 {
+    font-size: 3em;
     float: left;
-}
-
-.carousel__next, .carousel__prev {
-    width: 40px;
-    height: 40px;
-    background-color: white url(image/fleche_droite.png) center center no-repeat;
-    background-size: 20px 20px;
-    border-radius: 50%;
-    top: 50%;
-    margin-top: -20px;
-    right: -20px;
-    box-shadow: 0 15px 35px #3232321a,0 5px 15px #0000001a;
+    margin: 0;
+    margin-left: 5%;
+    color: red
+  }
+  
+  .top h1::before {
+    content: "\00a0\00a0\00a0";
+  }
+  
+  .top a {
+    text-decoration: none;
+    color: whitesmoke;
+  }
+  
+  .top ul {
+    float: right;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 50%;
+    font-size: 2em;
+  }
+  
+  .top ul li {
+    display: inline-block;
+    margin-left: 30px;
+  }
+  
+  .top ul li a:hover {
+    color: #e93b3b;
+  }
+  
+  .box1 {
+    background-color: #1a1a1a;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 90px;
+    margin-left: 15%;
+    margin-right: 15%;
+    -webkit-box-shadow: 0px 6px 18px 18px rgba(119, 119, 126, 0.2);
+            box-shadow: 0px 6px 18px 18px rgba(119, 119, 126, 0.2);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: whitesmoke;
+  }
+  
+  .box1 .movie_title {
+    margin-top: 10px;
+    margin-left: 375px;
+    margin-right: 25px;
+    font-size: 3em;
+    font-weight: bold;
+  }
+  
+  .box1 .play {
+    font-size: 1.5em;
+    background-color: rgba(255, 0, 0, 0.699);
+    border-radius: 15px;
+    margin-top: 20px;
+    margin-left: 460px;
+    margin-right: 100px;
+    text-align: center;
     cursor: pointer;
-    transition: transform 0.3s, opacity 0.3s;
-}
-
-.carousel__next, .carousel__prev {
-    transform: scale(1.2);
-}
-
-.carousel__prev {
-    background-image: url(image/fleche_gauche.png);
-    right: auto;
-    left: -20px;
-}
-
-.carousel__prev--hidden, .carousel__next--hidden {
-    opacity: 0;
-}
+  }
+  
+  .box1 .play:hover {
+    background-color: rgba(255, 0, 0, 0.514);
+  }
+  
+  .box1 .info {
+    font-size: 1.5em;
+    background-color: rgba(128, 128, 128, 0.808);
+    border-radius: 15px;
+    margin-top: 20px;
+    margin-left: 460px;
+    margin-right: 100px;
+    text-align: center;
+    cursor: pointer;
+  }
+  
+  .box1 .info:hover {
+    background-color: rgba(128, 128, 128, 0.541);
+  }
+  
+  .box1 .top_resume {
+    font-size: 1.2em;
+    position: absolute;
+    margin-top: 50px;
+    text-align: center;
+    margin-left: 10%;
+    width: 40%;
+  }
+  
+  .box1 .top_film {
+    width: 18%;
+    height: auto;
+    cursor: pointer;
+  }
+  
+  #best_movie, #title_category {
+    color: whitesmoke;
+    margin-bottom: 60px;
+    font-size: 2em;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+  
+  .carousel1, .carousel2, .carousel3, .carousel4 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  
+  .element img {
+    max-width: 200px;
+    height: auto;
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  
+  .element:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+  }
+  
+  .color_box {
+    background-color: #1a1a1a;
+    -webkit-box-shadow: 0px 6px 18px 18px rgba(119, 119, 126, 0.2);
+            box-shadow: 0px 6px 18px 18px rgba(119, 119, 126, 0.2);
+    margin-top: 90px;
+    margin-bottom: 90px;
+    padding-top: 10px;
+    padding-bottom: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
+  }
+  
+  .buttonnext {
+    background: transparent;
+    -webkit-box-shadow: 0px 0px 0px transparent;
+            box-shadow: 0px 0px 0px transparent;
+    border: 0px solid transparent;
+    text-shadow: 0px 0px 0px transparent;
+  }
+  
+  .buttonnext img {
+    max-width: 100px;
+    height: auto;
+  }
+  
+  .buttonnext img:hover {
+    max-width: 100px;
+    height: auto;
+    cursor: pointer;
+  }
+  
+  .buttonnext:hover {
+    margin-right: 5px;
+  }
+  
+  .buttonnext:hover:active {
+    margin-right: 10px;
+  }
+  
+  .buttonprev {
+    background: transparent;
+    -webkit-box-shadow: 0px 0px 0px transparent;
+            box-shadow: 0px 0px 0px transparent;
+    border: 0px solid transparent;
+    text-shadow: 0px 0px 0px transparent;
+  }
+  
+  .buttonprev img {
+    max-width: 100px;
+    height: auto;
+  }
+  
+  .buttonprev img:hover {
+    max-width: 100px;
+    height: auto;
+    cursor: pointer;
+  }
+  
+  .buttonprev:hover {
+    margin-left: 5px;
+  }
+  
+  .buttonprev:active {
+    margin-left: 10px;
+  }
+  
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    background-color: rgba(0, 0, 0, 0.4);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: whitesmoke;
+  }
+  
+  .modal #model_body div {
+    margin-top: 20px;
+  }
+  
+  .modal .modal_content {
+    background-color: #1a1a1a;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-animation: animetest;
+            animation: animetest;
+    -webkit-animation-duration: 0.6s;
+            animation-duration: 0.6s;
+    overflow: auto;
+  }
+  
+  .modal .modal_movie_title {
+    position: fixed;
+    margin-left: 45%;
+    margin-top: -15px;
+  }
+  
+  .modal .movie_image {
+    float: left;
+    height: auto;
+    width: 25%;
+    margin-right: 20px;
+  }
+  
+  .modal .resume {
+    width: 80%;
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover, .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
